apps/invidious/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  namespace: invidious
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: invidious
  template:
    metadata:
      labels:
        app: invidious
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: gluetun
          image: qmcgaw/gluetun@sha256:b0ee2135e6ba52ad3f102aae9663707cd1c9531485117067a380d3b2b6dd991d
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
        - name: invidious
          image: quay.io/invidious/invidious:latest
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/v1/stats
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/stats
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 1
              memory: 768Mi
